--- a/src/app/main/list/reminder-item/reminder-item.component.css
+++ b/src/app/main/list/reminder-item/reminder-item.component.css
@@ -67,3 +67,37 @@
     z-index: -5;
     opacity: 0;
 }
+
+/*channel info*/
+.reminder-item .channel-item{
+    padding: 2px 10px;
+    margin-left: 18px;
+    cursor: default;
+    border-radius: 40px;
+    height: 20px;
+    float: left;
+    margin-bottom: 3px;
+    margin-top: 3px;
+}
+
+.reminder-item input{
+    display: block;
+}
+
+.reminder-item textarea{
+    display: block;
+}
+
+.reminder-item .channel-item:hover{
+    background-color:  #03A9F4;
+}
+
+.reminder-item hr{
+    margin-bottom: 5px;
+    margin-top: 5px;
+    width: 95%;
+}
+
+.reminder-channel-my-channel{
+    background-color:#8BC34A !important;
+}
