--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -45,7 +45,7 @@
     background-color: #03A9F4;
     color: #ffffff;
     font-size: 16px;
-    cursor: pointer;
+    cursor: default;
     display: inline-block;
     position: relative;
     vertical-align: middle;
@@ -74,6 +74,7 @@
 .channel-item-with-span:hover {
     padding-right: 28px;
     padding-left: 14px;
+    cursor: pointer;
 }
 
 .channel-item > span {
